Fix: Gap in flex not supported on Safari

--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -3,7 +3,6 @@
 .contact-form {
 	width: 100%;
 	display: grid;
-	grid-template-rows: auto;
 	row-gap: 2.1875em;
 	font-size: 1em;
 	&__input-box {
