--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -51,11 +51,9 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		display: flex;
+		display: grid;
+		place-content: center;
 		row-gap: 3em;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
 		transition: opacity 0.15s ease-in, visibility 0s 0.35s;
 	}
 	&__link {
@@ -82,6 +80,7 @@
 
 	&--scrolling-down {
 		transform: translateY(-100%);
+		box-shadow: none;
 	}
 	&--on-top {
 		background: none;
@@ -201,8 +200,9 @@
 			align-self: center;
 		}
 		&__links {
-			flex-direction: row;
+			grid-auto-flow: column;
 			column-gap: 3em;
+			list-style: none;
 			margin-top: 2.5625em;
 			margin-right: 8vmax;
 			position: relative;
