--- a/src/components/sections/Contact.scss
+++ b/src/components/sections/Contact.scss
@@ -26,7 +26,6 @@
 		font-size: 1.25em;
 		width: 100%;
 		display: grid;
-		grid-template-rows: repeat(2, max-content);
 		grid-template-columns: 80vw;
 		row-gap: 5em;
 		justify-content: center;
@@ -41,10 +40,10 @@
 		font-weight: bold;
 	}
 	&__bar {
-		display: flex;
+		display: grid;
+		grid-auto-flow: column;
+		place-items: center;
 		column-gap: 4em;
-		align-items: center;
-		justify-items: center;
 		margin-top: 1em;
 	}
 	&__link {
@@ -63,7 +62,6 @@ only screen and (min-aspect-ratio: 13/9) {
 		font-size: max(1.25vw, 0.5938rem);
 		&__wrapper {
 			font-size: 1em;
-			grid-template-rows: auto;
 			grid-template-columns: repeat(2, 29em);
 			justify-content: space-evenly;
 		}
