--- a/src/components/sections/Projects.scss
+++ b/src/components/sections/Projects.scss
@@ -24,9 +24,8 @@
 		@include v.sectionTitle(rgba(v.$color-secondary-700, 0.3), 1.17em, 1.17em);
 	}
 	&__wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+		display: grid;
+		place-items: center;
 		row-gap: 9.375em;
 		margin: auto;
 		margin-bottom: 9.375em;
